--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.sumit.recaptchademo"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -43,5 +43,8 @@ dependencies {
 
     // Gson
     compile 'com.google.code.gson:gson:2.8.1'
+
+    // Alerter
+    compile 'com.tapadoo.android:alerter:1.0.8'
 
 }
